# kalamine

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  default.nix  pyproject.toml  setup.py  shell.nix
.github/workflows/: tests.yml
docs/: README.md  klc.md  xkb.md
docs/samples/: ansi.yaml  intl.yaml  lafayette.yaml  prog.yaml
kalamine/: __init__.py  cli.py  cli_msklc.py  cli_xkb.py  help.py  key.py  layout.py  msklc_manager.py  server.py  template.py  utils.py  xkb_manager.py
kalamine/data/: dead_keys.yaml  geometry.yaml  key_codes.yaml  key_sym.yaml  layout.yaml  qwerty_vk.yaml  scan_codes.yaml  user_guide.yaml  win_locales.yaml
kalamine/generators/: ahk.py  keylayout.py  klc.py  web.py  xkb.py
kalamine/templates/: base.C  base.ahk  base.keylayout  base.klc  full.C  full.RC  full.ahk  full.keylayout  full.xkb_keymap  full_1dk.xkb_symbols
kalamine/tpl/: base.C  base.ahk  base.keylayout  base.klc  base.xkb  base.xkb_keymap  base.xkb_patch  base.xkb_symbols  dummy.klc  full.C  full.ahk  full.keylayout  full.klc  full.xkb  full.xkb_patch  full.xkb_symbols  full_1dk.xkb  full_1dk.xkb_keymap  full_1dk.xkb_patch  full_1dk.xkb_symbols
kalamine/www/: collapsable-table.js  demo.js  heatmap.css  keebs.js  layout-analyzer.js  style.css  x-keyboard.js
kalamine/www/corpus/: LICENSE  README.md  chardict.py  en+fr.json  en.json  fr.json  fr.txt  fra_mixed-typical_2012_1M-sentences.json  merge.py
kalamine/www/mjs/: layout-analyzer.js  stats-canvas.js  stats-table.js  stats.js
layouts/: README.md  ansi.toml  ansi.yaml  intl.toml  intl.yaml  prog.toml  prog.yaml
tests/: test_macos.py  test_osx.py  test_parser.py  test_serializer_ahk.py  test_serializer_keylayout.py  test_serializer_klc.py  test_serializer_xkb.py  test_xkalamine.py  util.py
