[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# XXX distributing this "layouts" directory is a terrible idea
[tool.hatch.build.targets.sdist]
include = [ "/kalamine", "/layouts" ]

[project]
name = "kalamine"
version = "0.28"
description = "a cross-platform Keyboard Layout Maker"
readme = "README.rst"

authors = [{ name = "Fabien Cazenave", email = "fabien@cazenave.cc" }]
license = { text = "MIT License" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">= 3.8"
dependencies = [
    "click",
    "livereload",
    "lxml",
    "pyyaml",
    "tomli",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "pytest",
    "mypy",
    "types-PyYAML"
]

[project.urls]
Homepage = "https://github.com/OneDeadKey/kalamine"

[project.scripts]
kalamine = "kalamine.cli:cli"
xkalamine = "kalamine.cli_xkb:cli"

[tool.isort]
profile = "black"
