[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalamine"
version = "0.34"
description = "a cross-platform Keyboard Layout Maker"
readme = "README.rst"

authors = [{ name = "Fabien Cazenave", email = "fabien@cazenave.cc" }]
license = { text = "MIT License" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">= 3.8"
dependencies = [
    "click",
    "livereload",
    "pyyaml",
    "tomli",
    "progress",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "pytest",
    "lxml",
    "mypy",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/OneDeadKey/kalamine"

[project.scripts]
kalamine = "kalamine.cli:cli"
xkalamine = "kalamine.cli_xkb:cli"
wkalamine = "kalamine.cli_msklc:cli"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["progress.bar"]
ignore_missing_imports = true
