[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "kalamine"
version = "0.40"
description = "a cross-platform Keyboard Layout Maker"
readme = "README.rst"
authors = [{ name = "Fabien Cazenave", email = "fabien@cazenave.cc" }]
license = { text = "MIT License" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">= 3.11"
dependencies = [
    "click>=8.0",
    "livereload",
    "pyyaml",
    "progress",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "lxml",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-PyYAML",
    "twine>=5.1.1",
    "docutils>=0.22",
]

[project.urls]
Homepage = "https://github.com/OneDeadKey/kalamine"

[project.scripts]
kalamine = "kalamine.cli:cli"
xkalamine = "kalamine.cli_xkb:cli"
wkalamine = "kalamine.cli_msklc:cli"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true
